<resources>
    <!-- Default strings-->

    <!-- Strings used for fragments for the homepage -->
    <string name="app_name">PSI-Univ</string>
    <string name="Settings">Settings</string>
    <string name="HomePage">Homepage</string>
    <string name="Rennes1">Rennes 1 University</string>
    <string name="iconMenu">Icon Menu</string>


    <!-- English strings for the advanced search -->
    <string name="advanced_search_available_roms">Show available rooms</string>
    <string name="advanced_search_unavailable_roms">Show unavailable rooms</string>
    <string name="advanced_search_time_select">Select Time</string>
    <string name="advanced_search_date_select">Select Date</string>
    <string name="advanced_search_search_bar">Words</string>
    <string name="advanced_search_research_button">Research</string>
    <string name="result">No result</string>


    <!-- English strings for the toolbar -->
    <string name="ToolBar">PSI-Univ</string>
    <string name="ToolBarSearch">Research</string>

    <!-- English strings for the drawer -->
    <string name="drawer_place">Places</string>
    <string name="drawer_advanced_search">Advanced Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="PSILogo">PSI Logo</string>

    <!-- English string for the month name-->
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>

    <!-- English string for the settings-->
    <string name="defaultLanguage">English</string>
    <string name="defaultDateFormat">dd-MM-yyyy HH:mm</string>
    <string name="User">User</string>
    <string name="Language">Language</string>
    <string name="dateFormat">Date Format</string>
    <string name="dateFormat_summary">Change date format</string>
    <string name="Language_Summary">Change language</string>
    <string name="availableSettingsSummary">Show or not the available rooms</string>
    <string name="unavailableSettingsSummary">Show or not the unavailable rooms</string>
    <string name="available_rooms_toast_on">Available rooms will be shown</string>
    <string name="available_rooms_toast_of">Available rooms will not be shown</string>
    <string name="unavailable_rooms_toast_on">Unavailable rooms will be shown</string>
    <string name="unavailable_rooms_toast_of">Unavailable rooms will not be shown</string>

    <!-- English string for the room dialog fragment-->
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="no_next_class">Next class not found</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>