<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen">
    <PreferenceCategory
        android:key="key_user_category"
        android:title="@string/User">

        <ListPreference
            android:defaultValue="@string/defaultLanguage"
            android:entries="@array/languageList"
            android:entryValues="@array/languageListValue"
            android:key="key_language"
            android:summary="@string/Language_Summary"
            android:title="@string/Language" />

        <ListPreference
            android:defaultValue="@string/defaultDateFormat"
            android:entries="@array/dateFormatList"
            android:entryValues="@array/dateFormatListValue"
            android:key="key_date_format"
            android:summary="@string/dateFormat_summary"
            android:title="@string/dateFormat" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/advanced_search_available_roms"
            android:key="keyAvailableRoom"
            android:summary="@string/availableSettingsSummary" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/advanced_search_unavailable_roms"
            android:key="keyUnavailableRoom"
            android:summary="@string/unavailableSettingsSummary" />

    </PreferenceCategory>

</PreferenceScreen>