<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/advanced_search"
            android:icon="@drawable/ic_baseline_advanced_search_24"
            android:title="@string/drawer_advanced_search"/>
    </group>


    <item android:title="@string/drawer_place">
        <menu>
            <item
                android:id="@+id/Rennes1"
                android:title="@string/Rennes1"/>
            <item
                android:id="@+id/FAC2"
                android:title="FAC2"/>
            <item
                android:id="@+id/FAC3"
                android:title="FAC3"/>
            <item
                android:id="@+id/FAC4"
                android:title="FAC4"/>
        </menu>
    </item>

    <item android:title="@string/Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/Settings"/>
            </group>
        </menu>
    </item>

</menu>