<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/advanced_search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/ToolBarSearch"
        android:minHeight="48dp"
        android:text="@string/ToolBarSearch"
        android:autofillHints=""
        android:inputType="TODO" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_available_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/advanced_search_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:checked="true"

        android:minHeight="48dp"
        android:text="@string/advanced_search_available_roms" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_unavailable_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_available_room"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/advanced_search_unavailable_roms" />


    <TextView
        android:id="@+id/time_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_unavailable_room"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_background"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:hint="@string/advanced_search_time_select"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/ic_baseline_access_time_24" />

</RelativeLayout>